[FIX] web: menu_toggle SVG missing unit
Before this commit, some browsers showed a warning or, even worse,
dropped this CSS rule because the unit was missing.

This line ensures that the tip of the arrow is rounded instead of
truncated.

X-original-commit: 1074070475874958374b508a2c0b16d00fda146c

--- a/addons/web/static/src/webclient/navbar/navbar.scss
+++ b/addons/web/static/src/webclient/navbar/navbar.scss
@@ -50,7 +50,7 @@
 
                 &:first-child {
                     transform: translate(12%,0) #{"/* rtl:translate(-6%, 0) */"};
-                    rx: 1;
+                    rx: 100%;
                 }
             }
 
